snapshots/care/data4life/hc-util-sdk-kmp/error/1.12.0-SNAPSHOT/error-1.12.0-20220503.124322-1.module.sha1
7c75f1a726ef375a8159c75d6c84827e875ba84e